fixed alignment issue

--- a/master.css
+++ b/master.css
@@ -53,7 +53,6 @@ h4 {
   font-size: 30px;
 }
 p {
-  border-left: 4px solid;
   margin-top: 20px;
   padding: 0px;
 }
@@ -93,11 +92,13 @@ p {
 
 .whole-page {
   max-width: 100%;
-  height: 90%
+  height: 90%;
 }
 
 .body-content {
   margin: 0px;
+  padding: 0px;
+  border-left: 4px solid black;
 }
 
 /* ===========================================================================*/
